2005-09-01  Don Allingham  <don@gramps-project.org>
	* src/ImageSelect.py: Local edit of a media Note type now 
	brings up the Note editor instead of the media editor.
	* src/plugins/Verify.py: don't complain about difference in
	ages between spouses if birth year is unknown.

2005-09-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/po/check_po: Support for multiple files as command line
	arguments; untranslated strings dont need mismatch tests

2005-08-31  Don Allingham  <don@gramps-project.org>
	* src/plugins/RelCalc.py: use PeopleModel instead of ListModel,
	check to the person being compared to him/herself
	* src/plugins/relcalc.glade: increase the width of the window.
	* src/Report.py: Catch thrown Database error
	* src/GraphLayout.py: catch database loops
	* src/po/de.po: fix %()s mismatches
	* src/po/ru.po: fix %()s mismatches
	* src/po/check_po: utility to look for problems in .po files

2005-08-31  Eero Tamminen  <eerot@sf>
	* src/po/fi.po: Translation update for 2.0.7.

2005-08-31  Don Allingham  <don@gramps-project.org>
	* src/PedView.py: force an update of the cached person
	* src/gramps_main.py: force an update of the cached person
	* src/ReadGedcom.py: handle attributes if value is on the same line as the
	keyword

2005-08-31  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ReportUtils.py (insert_images): Warn about non existing files

2005-08-30  Alex Roitman  <shura@gramps-project.org>
	* src/po/ru.po: Translation update for 2.0.7.

2005-08-30  Don Allingham  <don@gramps-project.org>
	* src/po/de.po: fixed parameter arguments
	* doc/gramps-manual/C/getstart.xml: fixed spelling
	* doc/gramps-manual/C/mainwin.xml: fixed spelling
	* src/Errors.py: Add a DatabaseError type
	* src/Utils.py: detect database loops in descendants_too_old
	* src/WriteGedcom.py: report error message when database loop is detected
	* src/po/template.po: added new error message. May be too late for some
	translations to get this message.