@@ -65,7 +65,7 @@ column_names = [
     _('Death Place'),
     _('Spouse'),
     _('Last Change'),
-    _('Cause of Death'),
+    _('Cause of death'),
     ]
 
 #-------------------------------------------------------------------------
