@@ -14,6 +14,13 @@ all_named_s = {}
 all_bnamed_s = {}
 all_coverage = {}
 
+
+def strip_quotes(st):
+    if len(st.strip()) > 2:
+        return st.strip()[1:-1]
+    else:
+        return ""
+
 args = sys.argv
 while len(args) > 1:
     args = args[1:]
@@ -31,20 +38,21 @@ while len(args) > 1:
         if mode == NONE:
             if len(data) > 0 and data[0] == "msgid":
                 mode = MSGID
-                
-                current_msgid = data[1].split('"')[1]
+                if len(data) > 1:
+                    current_msgid = strip_quotes(data[1])
         elif mode == MSGID:
             if data[0][0] == '"':
-                current_msgid += line.split('"')[1]
+                current_msgid += strip_quotes(line)
             elif data[0] == "msgstr":
                 mode = MSGSTR
-                current_msgstr = data[1].split('"')[1]
+                if len(data) > 1:
+                    current_msgstr = strip_quotes(data[1])
         elif mode == MSGSTR:
             if line == "" or line[0] == "#":
                 mode = NONE
                 string_map[current_msgid] = current_msgstr
             elif len(data) > 0 and data[0][0] == '"':
-                current_msgstr += line.split('"')[1]
+                current_msgstr += strip_quotes(line)
     
     f.close()
     
@@ -133,3 +141,10 @@ if len(sys.argv) > 2:
             all_named_s[pofile],
             all_bnamed_s[pofile],
             all_coverage[pofile])
+
+f = open("used_strings.txt","w")
+keys = string_map.keys()
+keys.sort()
+for i in keys:
+    f.write(i + "\n")
+f.close()
